@@ -66,3 +66,5 @@ CHANGES SINCE 2.0.3
 
 32. Change: all id numbers (e.g. files, lists, canvases)  are now limited types.
 
+33. New: pragma assumption applied and factor, for abstract and limited type tests.
+
